<resources>
    <string name="app_name">Grao_Dourado</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="cafe">Café</string>
    <string name="salgado">Salgado</string>
    <string name="produto"> Pesquisar</string>

    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="selecione_categoria">Selecione</string>
    <string name="observacoes">Observações</string>
    <string name="enviar">Enviar</string>
</resources>